The structure of the elements has been changed