@@ -1,8 +1,6 @@
 package ru.solomka.graphic.scene.item.tag;
 
 import javafx.scene.Node;
-import javafx.scene.Parent;
-import javafx.scene.layout.AnchorPane;
 import javafx.scene.layout.Pane;
 import ru.solomka.graphic.scene.item.LazyComponent;
 import ru.solomka.graphic.scene.item.SceneItem;
@@ -11,7 +9,6 @@ import ru.solomka.graphic.style.CssStyle;
 
 import java.lang.reflect.InvocationTargetException;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public interface Container {
 
@@ -23,41 +20,15 @@ public interface Container {
      */
     void addChildren(Node item);
 
-    /**
-     * Adds new child to abstract container
-     *
-     * @param item Target item for add
-     * @see BasePane
-     */
-    void addChildren(SceneItem<?> item);
-
-    void removeChildren(Node item);
-
-    /**
-     * Returns non-abstract content the container
-     *
-     * @return Returns non-abstract content the container
-     */
-    List<Node> getChildren();
-
-    /**
-     * Returns abstract content the container
-     *
-     * @return Returns abstract content the container
-     * @see SceneItem
-     * @see BasePane
-     */
-    List<SceneItem<?>> getSource();
-
-
     @SuppressWarnings("unchecked")
-    static <I extends Container> Container fromSource(Class<I> instance, Parent region, Object[] properties) {
+    static <I extends Container> Container fromSource(Class<I> instance, Pane region, Object[] properties) {
 
-        if (!(region instanceof Pane root))
-            throw new IllegalArgumentException("Pane support only nodes which are inherited from Pane");
+        if (region == null)
+            throw new NullPointerException("Parent cannot be null");
+
 
         if (properties == null)
-            properties = new Object[]{root.getPrefWidth(), root.getPrefHeight()};
+            properties = new Object[]{region.getPrefWidth(), region.getPrefHeight()};
 
         I loader;
         try {
@@ -70,8 +41,34 @@ public interface Container {
         layout.setLocation(region.getLayoutX(), region.getLayoutY());
         layout.initStyle(CssStyle.create(region.getStyle()));
 
-        List<SceneItem<?>> items = layout.getChildren().stream().filter(c -> c instanceof AnchorPane).map(SceneItem::fromSource).collect(Collectors.toList());
+        List<SceneItem> items = layout.getChildren().stream().map(SceneItem::fromSource).toList();
 
-        return items.isEmpty() ? layout : ((LazyComponent<? extends Container, ? extends Node>) layout).preInit(items.toArray(SceneItem<?>[]::new));
+        return items.isEmpty() ? layout : ((LazyComponent<? extends Container, ? extends Node>) layout).preInit(items.toArray(SceneItem[]::new));
     }
+
+    void removeChildren(Node item);
+
+    /**
+     * Returns non-abstract content the container
+     *
+     * @return Returns non-abstract content the container
+     */
+    List<Node> getChildren();
+
+    /**
+     * Adds new child to abstract container
+     *
+     * @param item Target item for add
+     * @see BasePane
+     */
+    void addChildren(SceneItem item);
+
+    /**
+     * Returns abstract content the container
+     *
+     * @return Returns abstract content the container
+     * @see SceneItem
+     * @see BasePane
+     */
+    List<SceneItem> getSource();
 }
